fix: h1 chapter title should not overlap with start of content section on small screens

--- a/user/themes/longread/scss/custom.scss
+++ b/user/themes/longread/scss/custom.scss
@@ -353,13 +353,16 @@ form#email-capture {
       margin-right: 20px;
       color: white;
       text-shadow: 0px 1px 16px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(0, 0, 0, 0.5);
+      @include respond-to(600) {
+        top: -220px;
+      }
       .chapter-number {
         font-size: 16px;
       }
       h1 {
         color: white;
         font-size: 80px;
-        @include respond-to(540) {
+        @include respond-to(600) {
           font-size: 45px;
         }
         @include respond-to(460) {
